--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-size:cover;    
     background-position:center;
     width: 100%;
-    height: 70vh;
+    height: auto;
 }
 .nav{
     width: 100%;
@@ -466,9 +466,16 @@ body {
     color:rgba(255,255,255,0.7);
     margin-top:-25px;
 }
+
+@media (581px<=width<=1100px){
+    .box{
+        width: 500px;
+    }
+}
+
 @media (width<=580px){
     .head{
-        height: 100%;
+        height: auto;
     }
     .logo img{
         width:100px;
